# pkm

./: .dockerignore  .env.example  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  create_db.py  pyproject.toml  zz_commands.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
alembic/: env.py
alembic/versions/: 2026_05_25_1135-4f234ec0f226_initial_schema.py
app/: __init__.py  cloud_run.py  config.py  database.py  main.py
app/ai/: __init__.py  base.py  override.py  processors.py  router.py
app/ai/providers/: __init__.py  anthropic_provider.py  google_provider.py  openai_provider.py  opencode_provider.py  openrouter.py  sarvam_provider.py
app/bot/: __init__.py  formatters.py  middleware.py  progress.py  setup.py
app/bot/handlers/: __init__.py  ai_settings.py  ask.py  bookmark.py  code.py  media.py  note.py  raw.py  run.py  search.py  snapshot.py  start.py  task.py  voice.py
app/models/: __init__.py  attachment.py  base.py  entry.py  snapshot.py  tag.py
app/schemas/: entry.py  search.py  snapshot.py
app/services/: __init__.py  attachment_service.py  entry_service.py  search_service.py  snapshot_service.py  tag_service.py
