[project]
name = "pkm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "python-telegram-bot>=21",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "tenacity>=8.3",
]

[project.optional-dependencies]
ai = [
    "openai>=1.50",
    "anthropic>=0.37",
    "google-genai>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.setuptools]
packages = ["app"]
